@@ -1,21 +1,5 @@
-IMAGE_DUMP_PATH = "/public/images/dump/"
-
 ADMIN_USER = "foo"
 ADMIN_PASSWORD = "bar"
 
-## RDF
-RDF_TITLE = "My blog with donrails"
-RDF_DESCRIPTION = "Latest 10 aricles."
-RDF_COPYRIGHT = "Copyright 2006, User name"
-RDF_MANAGINGEDITOR = "my@mail.address (YOUR NAME)"
-RDF_WEBMASTER = "my@mail.address (YOUR NAME)"
-
-BASEURL = 'http://donrails.your.domain/'
-
 $KCODE = 'u'
 
-ADMIN_MAILADD = 'your@mail.address'
-
-IP_RBL = [ 'niku.2ch.net', 'opm.blitzed.us', 'bsb.empty.us' ]
-HOST_RBL = [ 'rbl.bulkfeeds.jp', 'sc.surbl.org', 'bsb.empty.us' ]
-URL_LIMIT = 5
